# matdoesdev-protocols

./: .gitignore  Cargo.toml  README.md
.github/workflows/: compile.yml
src/: crawl.rs  main.rs  parse.rs  protocols.rs  shared.rs
src/protocols/: finger.rs  gemini.rs  gopher.rs  http.rs  qotd.rs  ssh.rs  telnet.rs
src/protocols/gemini/: cert.rs
src/protocols/ssh/: connection.rs  ed25519.rs  protocol.rs
src/protocols/ssh/crypto/: ed25519.rs  mod.rs
src/terminal/: elements.rs  mod.rs
