[package]
name = "matdoesdev-protocols"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
async-recursion = "1.0.5"
byteorder = "1.4.3"
chrono = { version = "0.4.28", features = ["serde"] }
ctr = "0.9.2"
curve25519-dalek = "4.0.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
futures-util = "0.3.28"
hmac = "0.12.1"
html-escape = "0.2.13"
mime_guess = "2.0.4"
rand = "0.8.5"
rand_os = "0.2.2"
rcgen = "0.11.1"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tl = "0.7.7"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-util = { version = "0.7.8", features = ["codec"] }
url = "2.4.1"
