[package]
name = "matdoesdev-protocols"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
async-recursion = "1.1.1"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
hmac = "0.12.1"
html-escape = "0.2.13"
mime_guess = "2.0.5"
parking_lot = "0.12.3"
rand = "0.8.5"
rand_os = "0.2.2"
rcgen = "0.13.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tl = "0.7.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.12", features = ["codec"] }
url = "2.5.2"
